syntax = "proto3";
package palomachain.paloma.evm;

import "gogoproto/gogo.proto";
import "palomachain/paloma/evm/params.proto";
import "palomachain/paloma/evm/relay_weights.proto";

option go_package = "github.com/palomachain/paloma/x/evm/types";

// GenesisState defines the evm module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];

  GenesisSmartContract smartContract = 2;

  repeated GenesisChainInfo chains = 3;
}

message GenesisChainInfo {
  string chainReferenceID = 1;
  uint64 chainID = 2;
  uint64 blockHeight = 3;
  string blockHashAtHeight = 4;
  string minOnChainBalance = 5;
  RelayWeights relayWeights = 6;
}

message GenesisSmartContract {
  string abiJson = 1;
  string bytecodeHex = 2;
}
